--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
+    "axios": "^0.19.2",
     "material-ui-icons": "^1.0.0-beta.36",
     "popper.js": "^1.16.1",
     "react": "^16.12.0",
