--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
-    "bootstrap": "^4.4.1",
-    "jquery": "^3.4.1",
     "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
+    "gh-pages": "^2.2.0",
+    "jquery": "^3.4.1",
     "material-ui-icons": "^1.0.0-beta.36",
     "popper.js": "^1.16.1",
     "react": "^16.12.0",
@@ -22,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -38,5 +41,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "http://gyans92.github.io/qbook-frontend"
 }
